# pynostr-cli

./: .gitignore  README.md  app.py  pyproject.toml
pynostr_cli/: cli.py  key.py
